k8s/networking/db-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: endpoint-stats
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
